# KiMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/3d-models-and-footprints-search/: SKILL.md
.claude/skills/battery-and-low-power/: SKILL.md
.claude/skills/compliance-and-emc-testing/: SKILL.md
.claude/skills/datasheet-search/: SKILL.md
.claude/skills/dfm/: SKILL.md
.claude/skills/electrical-cad-best-practices/: SKILL.md
.claude/skills/errata-search/: SKILL.md
.claude/skills/high-voltage-design/: SKILL.md
.claude/skills/kicad-best-practices/: SKILL.md
.claude/skills/kimcp-architecture/: DECISIONS.md  SKILL.md  backends.md  configuration.md  extensibility.md  observability.md  packaging.md  performance.md  resources-and-prompts.md  safety.md  schemas.md  security.md  testing.md  tool-catalog.md  transport.md  workflow.md
.claude/skills/mechanical-integration/: SKILL.md
.claude/skills/power-integrity/: SKILL.md
.claude/skills/rf-design/: SKILL.md
.claude/skills/signal-integrity/: SKILL.md
.claude/skills/simulation-workflow/: SKILL.md
.claude/skills/vendor-search/: SKILL.md
research/m8_datasheet/: README.md  __init__.py  cache.py  fetcher.py  models.py  revdiff.py  test_smoke.py
scripts/: repair_2atom_at_nodes.py  snap_schematic_to_grid.py  upgrade_power_lib_symbols.py
src/kimcp/: __init__.py  __main__.py  _types.py  admin.py  config.py  errors.py  logging_config.py  resources.py  rpc.py  server.py
src/kimcp/backends/: __init__.py  base.py  cli.py  dispatcher.py  ipc.py  sexpr.py  swig.py
src/kimcp/cli/: __init__.py  errors.py  paths.py  runner.py  version.py
src/kimcp/ipc/: __init__.py  errors.py  probe.py  socket.py
src/kimcp/prompts/: __init__.py  base.py  registry.py
src/kimcp/prompts/builtin/: __init__.py  circuit_proposal.py  design_review.py  manufacturing_handoff.py
src/kimcp/safety/: __init__.py  audit.py  snapshot.py
src/kimcp/schemas/: __init__.py  envelope.py
src/kimcp/sexpr/: __init__.py  cache.py  document.py  errors.py  lexer.py  nodes.py  parser.py  tokens.py  watcher.py  writer.py
src/kimcp/tools/: __init__.py  base.py  registry.py
src/kimcp/tools/builtin/: __init__.py  _sexpr_build.py  config_show.py  ipc_get_version.py  kicad_ipc_status.py  kicad_version.py  lib_add_footprint.py  lib_add_symbol.py  lib_attach_3d_model.py  lib_list_footprints.py  lib_list_symbols.py  lib_register_library.py  lib_search_footprint.py  lib_search_symbol.py  pcb_drc.py  pcb_drc_violations.py  pcb_export_drill.py  pcb_export_dxf.py  pcb_export_gerbers.py  pcb_export_pdf.py  pcb_export_pos.py  pcb_export_step.py  pcb_export_svg.py  pcb_get_stackup.py  pcb_list_footprints.py  pcb_list_tracks.py  ping.py  sch_add_junction.py  sch_add_label.py  sch_add_no_connect.py  sch_add_power.py  sch_add_sheet.py  sch_add_symbol.py  sch_add_wire.py  sch_compose.py  sch_delete.py  sch_embed_lib_symbol.py  sch_erc.py  sch_export_bom.py  sch_export_netlist.py  (+9 more)
src/kimcp/transport/: __init__.py  base.py  stdio.py
tests/: conftest.py
tests/bench/: README.md
tests/e2e/: test_audit_log.py  test_ipc_get_version.py  test_kicad_ipc_status.py  test_lib_list_symbols.py  test_lib_search_symbol.py  test_pcb_drc.py  test_pcb_export_drill.py  test_pcb_export_gerbers.py  test_pcb_export_pdf.py  test_pcb_export_pos.py  test_pcb_export_step.py  test_resources.py  test_sch_add_junction.py  test_sch_add_label.py  test_sch_add_no_connect.py  test_sch_add_power.py  test_sch_add_sheet.py  test_sch_add_symbol.py  test_sch_add_wire.py  test_sch_delete.py  test_sch_embed_lib_symbol.py  test_sch_erc.py  test_sch_export_bom.py  test_sch_export_netlist.py  test_sch_export_pdf.py  test_sch_list_labels.py  test_sch_list_symbols.py  test_sch_list_wires.py  test_sch_set_title_block.py  test_stdio_smoke.py
tests/fixtures/sexpr/: simple_resistor.kicad_sym
tests/fuzz/: README.md
tests/golden/: README.md  test_sexpr_roundtrip_untouched.py
tests/integration/: README.md  test_kicad_cli_probe.py  test_lib_authoring_cli_load.py  test_sch_add_label_cli_load.py  test_sch_add_power_cli_load.py  test_sch_add_sheet_cli_load.py  test_sch_schematic_cli_load.py
tests/property/: test_config_merge.py  test_dispatcher_properties.py  test_label_kinds.py  test_sexpr_roundtrip.py
tests/unit/: test_admin.py  test_at_node_explicit_regression.py  test_cli_backend.py  test_cli_paths.py  test_cli_paths_system_symbol_lib.py  test_cli_runner.py  test_cli_version.py  test_config.py  test_dispatcher.py  test_envelope.py  test_errors.py  test_grid_snap_guardrail.py  test_ipc_backend.py  test_ipc_backend_call.py  test_ipc_probe.py  test_ipc_socket.py  test_logging_config.py  test_prompts_registry.py  test_registry.py  test_resources.py  test_rpc.py  test_server_audit.py  test_server_handler.py  test_server_lifecycle.py  test_server_prompts.py  test_sexpr_build.py  test_sexpr_cache.py  test_sexpr_document.py  test_sexpr_lexer.py  test_sexpr_nodes.py  test_sexpr_parser.py  test_sexpr_watcher.py  test_sexpr_writer.py  test_snapshot.py  test_swig_backend.py  test_tool_ipc_get_version.py  test_tool_kicad_ipc_status.py  test_tool_kicad_version.py  test_tool_lib_add_footprint.py  test_tool_lib_add_symbol.py  (+39 more)
